fixes research spacing 5

--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -251,6 +251,6 @@ p.research-date {
 }
 
 .item {
-    max-width: 75%;
+    max-width: 50%;
     margin: 0 auto;
 }
